# backend-python-intensiv-2026

./: .gitignore  PROJECTS.md  README.md
day_1/: option.py
day_1/service-template/: .gitignore  Dockerfile  README.md  pyproject.toml
day_1/service-template/src/: run.py
day_1/service-template/src/app/: config.py  main.py
day_1/service-template/src/config/: local.yaml
day_2/: README.md  config.yaml  practice.ipynb  pyproject.toml
day_2/app/: config.py  main.py
day_2/app/dependencies/: __init__.py  database.py
day_2/app/routers/: users.py
day_2/app/schemas/: user.py
day_3/weather_service/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
day_3/weather_service/app/: main.py  routers.py  schemas.py  services.py  utils.py
day_3/weather_service/tests/: conftest.py
day_3/weather_service/tests/integration/: test_routers.py
day_3/weather_service/tests/unit/: test_utils.py
day_4/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
day_5/monitoring-example/: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
day_5/monitoring-example/grafana/etc/provisioning/dashboards/: api-service.json
day_5/monitoring-example/grafana/etc/provisioning/datasources/: datasources.yaml
day_5/monitoring-example/prometheus/: prometheus.yml
day_5/monitoring-example/src/: run.py
day_5/monitoring-example/src/app/: api.py  config.py  main.py  weather.py
day_5/monitoring-example/src/tests/: conftest.py
day_5/monitoring-example/src/tests/integration/: test_api.py  test_metrics.py
day_5/monitoring-example/src/tests/unit/: test_weather.py
