[project]
name = "instrumented-service"
version = "0.1.0"
description = "Example for monitoring workshop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.27.0",
    "prometheus-client==0.23.1",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
